# DPK-Diplom-work

./: README.md  main.py  pyproject.toml  settings.py  tailwind.config.js
api/: __init__.py  admin.py  auth.py  post.py  user.py
database/: models.py
frontend_manager/: __init__.py  admin.py  auth.py  categories.py  error_404.py  info.py  main_page.py  post.py  user.py
frontend_manager/utils/: pagination.py  seconds_to_time.py
migrations/models/: 6_20240419201811_None.py  7_20240419202044_init.py  8_20240419202520_init3.py  9_20240419204700_init9.py
static/css/: style.css
static/scripts/: theme.js
templates/: base.html  index.html
templates/admin/: index.html
templates/auth/: login.html  registration.html
templates/categories/: about.html  index.html
templates/components/: footer.html  header.html  sidebar.html
templates/errors/: 404.html  500.html
templates/icons/: icon_bold.html  icon_delete.html  icon_hr.html  icon_italic.html  icon_removeFormat.html  icon_strikeThrough.html  icon_underline.html
templates/info/: about_product.html  contact.html  policy_privacy.html
templates/post/: create.html  read.html
templates/user/: index.html  profile.html  profile_another.html  settings.html
